# ppca-raft

./: CMakeLists.txt  ClientModule.hpp  LICENSE  ServerModule.hpp  client.cpp  client.hpp  main.cpp  node.cpp  run.sh  server.cpp  server.hpp
cmake/: Findgrpc.cmake
configs/: c1.json  s1.json  s2.json  s3.json  s4.json  s5.json
protos/: CMakeLists.txt  Makefile  helloworld.proto  raft.grpc.pb.cc  raft.grpc.pb.h  raft.pb.cc  raft.pb.h  raft.proto
